<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:tag="drug_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.card.DrugCardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/genericName"
            android:text="@string/generic_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/genericNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tradeName"
            android:text="@string/trade_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/tradeNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/drugClass"
            android:text="@string/drug_class"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/drugClassSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/drugSystem"
            android:text="@string/drug_system"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/drugSystemSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/action"
            android:text="@string/action_mechanism"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/actionTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"/>
        <TextView
            android:id="@+id/sideEffects"
            android:text="@string/side_effects"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/sideEffectsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"/>
        <TextView
            android:id="@+id/adverse"
            android:text="@string/adverse_reactions"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/adverseTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"/>
        <TextView
            android:id="@+id/interactions"
            android:text="@string/interactions"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/interactionsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"/>
        <TextView
            android:id="@+id/implications"
            android:text="@string/nursing_implications"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/implicationsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"/>
        <TextView
            android:id="@+id/other"
            android:text="@string/other"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/otherTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"/>

    </LinearLayout>
    </ScrollView>

</FrameLayout>